# wretag

./: LICENSE  README.md  pyproject.toml
wretag/: main.py
