[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wretag"
version = "0.1.0"
description = "CLI tool to add or change local version tags to Python wheel files"
authors = [{ name="Ville Ahlgren", email="ville.ahlgren@csc.fi" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["wheel"]

[project.scripts]
wretag = "wretag.main:main"

